Fix label misalignment

--- a/plugins/woocommerce/client/legacy/css/_mixins.scss
+++ b/plugins/woocommerce/client/legacy/css/_mixins.scss
@@ -387,7 +387,7 @@
 @mixin woocommerce-float-label {
 	color: var(--wc-subtext);
 	font-size: var(--wp--preset--font-size--small);
-	left: 1.2em;
+	left: 1.3em;
 	margin-bottom: 0;
 	position: absolute;
 	text-align: left;
