--- a/plugins/woocommerce/client/legacy/css/woocommerce.scss
+++ b/plugins/woocommerce/client/legacy/css/woocommerce.scss
@@ -1166,7 +1166,7 @@ p.demo_store,
 
 			label {
 				@include woocommerce-float-label();
-				left: 1.5em;
+				left: 1.55em;
 
 				&.is-active {
 					transform: translateY(-2px) scale(.75);
